# KeyboardShortcutKatas.Cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: github_actions_build.yml
code/: CMakeLists.txt  Inline.h  MoveLines.txt  Navigation.h
code/_/: Underscores.h
code/_/XX/: XX.cpp  XX.h  XXX.cpp  XXX.h  XXXX.cpp  XXXX.h  XXXXX.cpp  XXXXX.h
code/_/XXX/: XX.cpp  XX.h  XXX.cpp  XXX.h  XXXX.cpp  XXXX.h  XXXXX.cpp  XXXXX.h
code/_/__/: __.h  ___.h  ____.h  _____.h
code/_/___/: __.cs  __.h  ___.cs  ___.h  ____.cs  ____.h  _____.cs  _____.h
lib/: ApprovalTests.hpp
tests/: CMakeLists.txt  NewTest.cpp
