cmake_minimum_required(VERSION 3.8)
project(KeyboardShortcutKatas.code CXX)
add_library(KeyboardShortcutKatas.code
        _/XX/XX.cpp
        _/XX/XXX.cpp
        _/XX/XXXX.cpp
        _/XX/XXXXX.cpp
        _/XXX/XX.cpp
        _/XXX/XXX.cpp
        _/XXX/XXXX.cpp
        _/XXX/XXXXX.cpp
        )
